@@ -3,11 +3,12 @@
 // SPDX-License-Identifier: Apache2.0
 //
 
-version := "0.9.5-aiq4"
+version := "0.9.5-aiq6"
 scalaVersion := sys.env.getOrElse("SCALA_VERSION", "2.12.15")
 organization := "com.ibm"
 name := "spark-s3-shuffle"
-val sparkVersion = sys.env.getOrElse("SPARK_VERSION", "3-3-2-aiq45mp1")
+// TODO: use AIQ release?
+val sparkVersion = sys.env.getOrElse("SPARK_VERSION", "3.3.2")
 val javaVersion = "11"
 
 enablePlugins(GitVersioning, BuildInfoPlugin)
@@ -49,6 +50,7 @@ else Seq())
 javacOptions ++= Seq("-release", javaVersion)
 scalacOptions ++= Seq("-release", javaVersion)
 javaOptions ++= Seq(
+  "--illegal-access=permit",
   "--add-opens=java.base/java.lang=ALL-UNNAMED",
   "--add-opens=java.base/java.math=ALL-UNNAMED",
   "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
